# deepagent

./: .gitignore  claude.md
agent/: .env.example  main.py  pyproject.toml  requirements.txt  state.py
agent/agents/: __init__.py  orchestrator.py
agent/tools/: __init__.py  onboarding.py
docs/: PRD.md  RESTART.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
